# WSL-Arch-VSCode-Clangd-CMake

./: .clang-format  CMakeLists.txt  Hello.cpp  README.md
.cache/clangd/index/: Hello.cpp.61B27F35164F7FFE.idx  boo.cpp.7F49D4A8B8ECCEC6.idx  boo.hpp.207C620FDD9558D5.idx
src/: boo.cpp  boo.hpp
